<resources>
    <string name="app_name">AllGoods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading</string>
    <string name="welcome_to_allgoods_n_app_n_the_center_of_commerce">Welcome to allGoods \n App \n The center of commerce</string>
    <string name="upper_splash_image">Upper Splash Image</string>
    <string name="lower_splash_image">lower splash image</string>
    <string name="app_logo">logo</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hash">*********</string>
    <string name="ex_jon_smith_email_com">ex: jon.smith@email.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">SIGN IN</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="back_button">back button</string>
    <string name="ex_jon_smith">ex: jon smith</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="account_information">Account Information</string>
    <string name="passwords">Passwords</string>
    <string name="my_cards">My Cards</string>
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="verified_profile">Verified Profile</string>
    <string name="user_name">Mrh Raju</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="please_write_your_email_to_receive_a_n_confirmation_code_to_set_a_new_password">Please write your email to receive a \n confirmation code to set a new password.</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="forget_password_image">Forget password image</string>
    <string name="verification_code">Verification Code</string>
    <string name="_00_20">00:20</string>
    <string name="resend_confirmation_code">resend confirmation code.</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="otp_confirmed">OTP Confirmed: %1$s</string>
    <string name="otp_resent">OTP Resent</string>
    <string name="please_enter_all_digits">Please enter all 4 digits</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="new_password">New Password</string>
    <string name="please_write_your_new_password">Please write your new password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_reset_successfully">Password reset successfully</string>
    <string name="stats">Stats</string>
    <string name="inventory">Inventory</string>
    <string name="add_product">Add Product</string>
    <string name="orders_seller">Orders</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_allgoods">Welcome to AllGoods.</string>
    <string name="search">Search...</string>
    <string name="choose_item">Choose Item</string>
    <string name="pants">Pants</string>
    <string name="t_shirt">T-shirt</string>
    <string name="hoodie">Hoodie</string>
    <string name="clothes">Clothes</string>
    <string name="_99">99</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="_2xl">2XL</string>
    <string name="men_s_printed_pullover_hoodie">Men\'s Printed Pullover Hoodie</string>
    <string name="_120">$120</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="view_all">View All</string>
    <string name="ronald_richards">Ronald Richards</string>
    <string name="_4_8_rating">4.8 rating</string>
    <string name="total_price">Total Price</string>
    <string name="rating">rating</string>
    <string name="_4_8">4.8</string>
    <string name="size_guide">Size Guide</string>
    <string name="items">Items</string>
    <string name="in_wishlist">in wishlist</string>
    <string name="available_in_stock">Available in stock</string>
    <string name="_245">245</string>
    <string name="add_review">Add Review</string>
    <string name="image_add">Image add</string>
    <string name="person">Person</string>
    <string name="reviewer_name">Reviewer Name</string>
    <string name="_13_sep_2020">13 Sep, 2020</string>
    <string name="_4">4.5</string>
    <string name="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque malesuada eget vitae amet…</string>
    <string name="type_your_name">Type your name</string>
    <string name="how_was_your_experience">How was your experience ?</string>
    <string name="describe_your_experience">Describe your experience?</string>
    <string name="address">Address</string>
    <string name="mrh_raju">Mrh Raju</string>
    <string name="city">City</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="sylhet">Sylhet</string>
    <string name="phone_number">Phone Number</string>
    <string name="_880_1453_987533">+880 1453-987533</string>
    <string name="chhatak_sunamgonj_12_8ab">Chhatak, Sunamgonj 12/8AB</string>
    <string name="save">Save</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_owner">Card Owner</string>
    <string name="card_number">Card Number</string>
    <string name="_5254_7634_8734_7690">5254 7634 8734 7690</string>
    <string name="_24_24">24/24</string>
    <string name="cvv">CVV</string>
    <string name="_776">776</string>
    <string name="add_card">Add Card</string>
    <string name="submit_review">Submit Review</string>
    <string name="men_s_tie_dye_t_shirt_nnike_sportswear">Men\'s Tie-Dye T-Shirt\nNike Sportswear</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="checkout">Checkout</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="total">Total</string>
    <string name="visa_classic">Visa Classic</string>
    <string name="payment_method">Payment Method</string>
    <string name="no_address_please_add_one">No Address, please add one</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="no_internet">No internet</string>
    <string name="email_sent">Email Sent to</string>
    <string name="payment">Payment</string>
    <string name="save_as_primary_address">Save as primary address</string>
    <string name="save_card_info">Save card info</string>
    <string name="no_cards_please_add_one">No cards, please add one</string>
    <string name="_1_555_123_4567">+1 (555) 123-4567</string>
    <string name="do_you_really_want_to_exit_your_account">Do you really want to exit your account?</string>
    <string name="_3_reviews">3 Reviews</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_photo">Product Photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="product_title">Product Title *</string>
    <string name="classic_white">Classic White</string>
    <string name="images">images</string>
    <string name="category_hint">e.g, shirt, t-shirt, pants, suit</string>
    <string name="no_reviews_for_this_product_yet">No reviews for this product yet.</string>
    <string name="error_loading_reviews">Error loading reviews.</string>
    <string name="_0_orders">0 Orders</string>
    <string name="your_order_has_been_confirmed_we_will_send_you_confirmation_email_shortly">Your order has been confirmed, we will send you confirmation email shortly.</string>
    <string name="wishlist_is_empty">Wishlist is empty</string>
    <string name="star">star</string>
    <string name="cancel">Cancel</string>
    <string name="restock">Restock</string>
    <string name="current_stock">Current stock:</string>
    <string name="slim_fit_denim_jeans">Slim Fit Denim Jeans</string>
    <string name="restock_product">Restock Product</string>
    <string name="close">Close</string>
    <string name="delete_product">Delete Product?</string>
    <string name="this_action_cannot_be_undone_this_will_permanently_delete_the_product_from_your_inventory">This action cannot be undone. This will permanently delete the product from your inventory .</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_not_valid">Password Not Valid</string>
    <string name="email_is_required1">Email is required</string>
    <string name="enter_valid_email1">Enter valid email</string>
    <string name="pending">Pending</string>
    <string name="order_id">ORD - 001</string>
    <string name="location">location</string>
    <string name="credit_card">Credit Card</string>
    <string name="order_items">Order Items</string>
    <string name="mark_delivered">Mark Delivered</string>
    <string name="_2_total">2 Total</string>
    <string name="delivered_orders_2">Delivered Orders (2)</string>
    <string name="delivered_on_2025_11_13">Delivered on 2025 - 11 - 13</string>
    <string name="delivered">Delivered</string>
    <string name="no_data_available">No data available</string>
</resources>