<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_info"
            android:title="@string/account_information"
            android:icon="@drawable/info"/>

        <item
            android:id="@+id/passwords"
            android:title="@string/passwords"
            android:icon="@drawable/lock"/>
        <item
            android:id="@+id/my_cards"
            android:title="@string/my_cards"
            android:icon="@drawable/wallet"/>
        <item
            android:id="@+id/wishlist"
            android:title="@string/wishlist"
            android:icon="@drawable/drawer_wishlist_icon"/>

    </group>





</menu>