<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Auth.forgetpassword.NewPasswordActivity">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/backButton"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_button"
        android:layout_margin="22dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:text="@string/new_password"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/ivNewPass"
        android:contentDescription="@string/forget_password_image"
        android:src="@drawable/upper_new_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewPassword"
        />

    <TextView
        android:id="@+id/text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="@+id/ivNewPass"
        app:layout_constraintTop_toBottomOf="@id/ivNewPass"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hash"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/text_pass"
        app:layout_constraintTop_toBottomOf="@id/text_pass"
        app:layout_constraintEnd_toEndOf="@id/text_pass"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/text_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_password"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="@+id/ivNewPass"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hash"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/text_confirm_pass"
        app:layout_constraintTop_toBottomOf="@id/text_confirm_pass"
        app:layout_constraintEnd_toEndOf="@id/text_confirm_pass"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/please_write_your_new_password"
        android:textColor="@color/gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSResetPass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_custom_button"
        app:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hint"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/upper_splash_image"
        android:src="@drawable/lower_login"
        android:id="@+id/image_lower_login"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>