<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".UI.Customer.MyCards.AddCardsFragment">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/backButtonAddCard"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_button"
        android:layout_margin="22dp"
        />

    <TextView
        android:id="@+id/tvAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_card"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButtonAddCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButtonAddCard"
        />
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/imageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddCard"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_add_card"
        />

    <TextView
        android:id="@+id/tvCardOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_owner"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCard"
        android:layout_margin="22dp"
        />

    <EditText
        android:id="@+id/etCardOwner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/bg_gray_fa"
        android:gravity="center_vertical"
        android:hint="@string/mrh_raju"
        android:textColor="@color/black"
        android:textColorHint="@color/gray9E"
        app:layout_constraintTop_toBottomOf="@id/tvCardOwner"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCardOwner"
        android:layout_margin="22dp"
        />

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/bg_gray_fa"
        android:gravity="center_vertical"
        android:hint="@string/_5254_7634_8734_7690"
        android:textColor="@color/black"
        android:textColorHint="@color/gray9E"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvEXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXP"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCardNumber"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber"
        android:layout_marginTop="15dp"
        />


    <EditText
        android:id="@+id/etEXP"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/bg_gray_fa"
        android:gravity="center_vertical"
        android:hint="@string/_24_24"
        android:textColor="@color/black"
        android:textColorHint="@color/gray9E"
        app:layout_constraintTop_toBottomOf="@id/tvEXP"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number|text"
        android:maxLines="1"
        android:maxLength="5"
        />

    <TextView
        android:id="@+id/tvCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvEXP"
        app:layout_constraintStart_toStartOf="@+id/etCVV"
        app:layout_constraintTop_toTopOf="@id/tvEXP" />

    <EditText
        android:id="@+id/etCVV"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_gray_fa"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/_776"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etEXP"
        app:layout_constraintTop_toBottomOf="@id/tvCVV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCard"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/add_card"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_custom_button"
        app:backgroundTint="@null"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>